# django-admin-announcements

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  stylelint.config.mjs
.github/workflows/: ci.yml
admin_announcements/: __init__.py  admin.py  apps.py  managers.py  models.py  urls.py  views.py
admin_announcements/contrib/unfold/: __init__.py  admin.py  apps.py
admin_announcements/contrib/unfold/templates/admin/: base.html  index.html
admin_announcements/contrib/unfold/templates/admin_announcements/: announcement_detail.html
admin_announcements/locale/de/LC_MESSAGES/: django.mo  django.po
admin_announcements/migrations/: 0001_initial.py  0002_alter_adminannouncement_options_and_more.py  0003_alter_adminannouncement_summary.py  0004_remove_adminannouncement_is_active_and_more.py
admin_announcements/static/admin_announcements/css/: announcements.css  concrete.min.css
admin_announcements/static/admin_announcements/js/: announcements.js
admin_announcements/templates/admin/: base_site.html
admin_announcements/templates/admin_announcements/: announcement_detail.html  announcements_banner.html
admin_announcements/templatetags/: admin_announcements.py
tests/: test_announcements.py  test_package.py  test_smoke.py  test_ui_announcements.py
tests/server/: manage.py
tests/server/testapp/: admin.py  settings.py  settings_unfold.py  urls.py
