[project]
name = "django-admin-announcements"
description = "Admin announcements for Django (with optional django-unfold integration)"
authors = [{ name = "Marc Widmer", email = "marc@pbi.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "admin",
    "announcements",
    "unfold",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
unfold = [
    "django-unfold>=0.52.0",
]
unfold-modal = [
    "django-unfold-modal>=0.1.0",
]
markdown = [
    "markdown>=3.10.2",
    "nh3>=0.2.18",
]

[project.urls]
Homepage = "https://github.com/metaforx/django-admin-announcements"
Repository = "https://github.com/metaforx/django-admin-announcements"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-env>=1.2.0,<2",
]
ui = [
    "pytest-playwright>=0.4",
]
dev = ["ruff>=0.4"]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["admin_announcements"]

[tool.hatch.version]
path = "admin_announcements/__init__.py"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=testapp.settings
    --ignore=tests/test_ui_announcements.py
    """
markers = [
    "ui: Playwright UI tests (require pytest-playwright and a browser)",
]
testpaths = ["tests"]
pythonpath = [".", "tests/server"]
django_find_project = false
env = [
    "DJANGO_ALLOW_ASYNC_UNSAFE=true",
]

[tool.ruff]
fix = true
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B905", # zip() without strict=True
    "C901", # too complex
]
